adaptação docker-compose com network

--- a/authentication-flow/docker-compose.yaml
+++ b/authentication-flow/docker-compose.yaml
@@ -10,3 +10,9 @@ services:
       - .:/home/node/app
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
+    networks:
+      - keycloak-net
+
+networks:
+  keycloak-net:
+    external: true
