--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - keycloak-net
   
   db:
     image: mysql:8.0.30-debian
@@ -32,3 +34,10 @@ services:
       interval: 5s
       timeout: 10s
       retries: 3
+    networks:
+      - keycloak-net
+
+
+networks:
+  keycloak-net:
+    external: true
