--- a/authentication-flow/implicit-flow/package.json
+++ b/authentication-flow/implicit-flow/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "workspaces": [
+    "implicit-flow"
+  ],
   "dependencies": {
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
