--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=keycloak
-    security_opt:
+    security_opt: # NUNCA USAR ISSO EM PRODUÇÃO
       - seccomp:unconfined
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
